<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.codepath.apps.simpletweets.fragments.TweetDetailFragment"
    android:padding="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_140"
        android:id="@+id/tvCharsRemaining"
        android:textColor="@android:color/holo_blue_light"
        android:layout_alignBottom="@+id/btnTweet"
        android:layout_toLeftOf="@+id/btnTweet"
        android:layout_alignTop="@+id/btnTweet"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:background="@android:color/background_dark"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/ivClose"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet"
        android:id="@+id/btnTweet"
        android:background="@android:color/holo_blue_light"
        android:textColor="#ffffff"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/etComposeTweet"
        android:layout_marginTop="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etComposeTweet"
        android:hint="@string/whats_happening"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="4"
        android:selectAllOnFocus="false"
        android:layout_below="@+id/ivProfileImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/tvUserName" />

    <TextView
        android:text="@string/screenname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_alignLeft="@+id/tvUserName"
        android:layout_alignStart="@+id/tvUserName"
        android:id="@+id/tvScreenName"
        android:textColor="#899AA7"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light" />

</RelativeLayout>