<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.codepath.apps.simpletweets.activities.ProfileActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlUserHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="9dp"
        android:id="@+id/flContainer">

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/rlUserHeader"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_height="120dp"
            app:srcCompat="@drawable/ic_profile"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:id="@+id/ivProfileImage"
            android:layout_width="120dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:text="@string/tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTagline"
            android:textSize="12sp"
            android:layout_alignLeft="@+id/tvFullName"
            android:layout_alignStart="@+id/tvFullName"
            android:layout_below="@+id/tvFullName"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/ivProfileImage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TextView
                android:text="@string/followers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tvFollowers"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:text="@string/following"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/tvFollowing"
                android:layout_weight="1"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:text="@string/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFullName"
            android:textStyle="normal|bold"
            android:textSize="18sp"
            android:layout_alignTop="@+id/ivProfileImage"
            android:layout_toRightOf="@+id/ivProfileImage"
            android:layout_toEndOf="@+id/ivProfileImage"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp" />
    </RelativeLayout>

</RelativeLayout>
