<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:popupTheme="@style/AppTheme"
        app:title="Tweet"
        app:titleTextColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screenname"
        android:id="@+id/tvScreenName"
        android:textColor="#899AA7"
        android:textSize="16sp"
        android:fontFamily="sans-serif-light"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_below="@+id/tvUserName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:id="@+id/tvCreatedAt"
        android:fontFamily="sans-serif-light"
        android:textColor="#899AA7"
        android:textSize="12sp"
        android:layout_below="@+id/tvScreenName"
        android:layout_alignLeft="@+id/tvScreenName"
        android:layout_alignStart="@+id/tvScreenName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvUserName"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="19sp"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignLeft="@+id/tvCreatedAt"
        android:layout_alignStart="@+id/tvCreatedAt"
        android:layout_marginTop="25dp" />

    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="ContentDescription"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="matrix"
        android:layout_alignBottom="@+id/my_toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="11dp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:scaleType="fitCenter"
        app:srcCompat="@android:color/background_dark"
        android:layout_alignTop="@+id/tvUserName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tweet_body"
        android:id="@+id/tvBody"
        android:autoLink="all"
        android:linksClickable="true"
        android:textColorLink="#1E97E0"
        android:fontFamily="sans-serif-light"
        android:lineSpacingMultiplier="1.1"
        android:textColor="#2B3135"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/tvCreatedAt"
        android:layout_alignLeft="@+id/ivProfileImage"
        android:layout_alignStart="@+id/ivProfileImage"
        android:layout_marginRight="18dp" />
</RelativeLayout>


